# cflfac-lynarr

./: CMakeLists.txt  README.md
example_scripts/: testScript_longData.sh  testScript_shortData.sh
src/: algorithms.c  algorithms.h  duval.c  libsais.c  lrmisa.c  nsvisa.c  rDuval.c
